@@ -1,12 +1,11 @@
 package com.glassdoor.planout4j;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import org.junit.BeforeClass;
 import org.junit.Test;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 import com.glassdoor.planout4j.compiler.PlanoutDSLCompiler;
 import com.glassdoor.planout4j.config.Planout4jTestConfigHelper;
@@ -31,17 +30,17 @@ public class CompileAndEvaluateTest {
     @Test
     public void testCanUseImmutableCompilerOutput() throws Exception {
         Map<String, ?> code = Helper.deepCopy(PlanoutDSLCompiler.dsl_to_json("x = 2;"), null);
-        assertEquals(ImmutableMap.of("x", 2.0), new Interpreter(code, "salt", Collections.EMPTY_MAP, Collections.EMPTY_MAP).getParams());
+        assertEquals(Map.of("x", 2.0), new Interpreter(code, "salt", Collections.EMPTY_MAP, Collections.EMPTY_MAP).getParams());
         code = Helper.deepCopy(PlanoutDSLCompiler.dsl_to_json("x = [1,2];"), null);
-        assertEquals(ImmutableMap.of("x", ImmutableList.of(1.0, 2.0)), new Interpreter(code, "salt", Collections.EMPTY_MAP, Collections.EMPTY_MAP).getParams());
+        assertEquals(Map.of("x", List.of(1.0, 2.0)), new Interpreter(code, "salt", Collections.EMPTY_MAP, Collections.EMPTY_MAP).getParams());
     }
 
     @Test
     public void specialValuesTest() throws Exception {
         Map<String, ?> code = Helper.deepCopy(PlanoutDSLCompiler.dsl_to_json(
                 "x = \"\"; y = uniformChoice(choices=[\"\"], unit=userid);"), null);
-        assertEquals(ImmutableMap.of("x", "", "y", ""),
-                new Interpreter(code, "salt", ImmutableMap.<String, Object>of("userid", ""), Collections.EMPTY_MAP).getParams());
+        assertEquals(Map.of("x", "", "y", ""),
+                new Interpreter(code, "salt", Map.<String, Object>of("userid", ""), Collections.EMPTY_MAP).getParams());
     }
 
 }
